cv lehe tegemine

--- a/CV.html
+++ b/CV.html
@@ -53,8 +53,29 @@
             <!-- end navigation -->
         </header>
         <!-- end header -->
+         <!-- start about section -->
+        <section class="wow animate__fadeIn parallax" data-parallax-background-ratio="0.5" style="background-image:url('https://via.placeholder.com/1920x1100');">
+            <div class="container-fluid padding-five-lr">
+                <div class="row justify-content-end">                  
+                    <div class="col-12 col-xxl-5 col-xl-6 col-lg-7">
+                        <div class="padding-ten-all md-padding-70px-all sm-padding-25px-all bg-white box-shadow-light">
+                            <i class="margin-15px-bottom"></i>
+                            <h5 class="text-extra-dark-gray margin-50px-bottom md-margin-20px-bottom alt-font">ISIKUANDMED </h5>
+                            <ul class="text-medium list-style-3">
+                                <li><span class="w-30 lg-w-35 md-w-30 xs-w-35 xs-padding-5px-right d-inline-block">Nimi:</span>Oliver Juss</li>
+                                <li><span class="w-30 lg-w-35 md-w-30 xs-w-35 xs-padding-5px-right d-inline-block">Email:</span><a href="mailto:oliver.juss@ametikool.ee">oliver.juss@ametikool.ee</a></li>
+                                <li><span class="w-30 lg-w-35 md-w-30 xs-w-35 xs-padding-5px-right d-inline-block">Telefon:</span>+372 5668 1811</li>
+                                <li><span class="w-30 lg-w-35 md-w-30 xs-w-35 xs-padding-5px-right d-inline-block">Sünniaeg:</span>09.04.2002</li>
+                                <li><span class="w-30 lg-w-35 md-w-30 xs-w-35 xs-padding-5px-right d-inline-block">Aadress:</span>Piimapisara 20, Harku vald, Harjumaa</li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- end about section -->
         <!-- start hero section -->
-        <section class="wow animate__fadeIn p-0 mobile-height parallax" data-parallax-background-ratio="0.5" style="background-image: url('images/homepage-option18-banner.jpg')">
+        <!-- <section class="wow animate__fadeIn p-0 mobile-height parallax" data-parallax-background-ratio="0.5" style="background-image: url('images/homepage-option18-banner.jpg')">
             <div class="container text-center one-third-screen lg-h-350px md-h-500px sm-h-auto sm-padding-40px-top sm-padding-50px-bottom">
                 <div class="row">
                     <div class="col-12 col-md-3 d-flex flex-column align-items-center justify-content-center one-third-screen lg-h-330px md-h-500px sm-h-auto text-center wow  sm-h-auto sm-margin-30px-bottom">
@@ -62,21 +83,21 @@
                     </div>
                     <div class="col-12 col-md-6 d-flex flex-column align-items-center justify-content-center one-third-screen lg-h-350px md-h-500px sm-h-auto text-center sm-h-auto">
                         <div class="font-weight-300 alt-font title-large text-extra-dark-gray d-inline-block align-bottom mx-auto"><span class="font-weight-600 text-bold-underline position-relative">Portfoolio</span></div>
-                        <div class="font-weight-600  text-extra-dark-gray text-large  text-uppercase margin-40px-top letter-spacing-2 alt-font sm-margin-10px-top"><a href="CV.html">OLIVER JUSS</a></div>
+                        <div class="font-weight-600  text-extra-dark-gray text-large  text-uppercase margin-40px-top letter-spacing-2 alt-font sm-margin-10px-top"> OLIVER JUSS  </div>
                         <div class="text-medium-gray text-small text-uppercase margin-10px-top letter-spacing-2 alt-font sm-margin-10px-top">
                              KUJUNDUSGRAAFIK</div>
                     </div>
                 </div>
             </div>
-        </section>
+        </section> -->
         <!-- end hero section -->
         <!-- start portfolio section -->
-        <section class="wow animate__fadeIn p-0">
+        <!-- <section class="wow animate__fadeIn p-0">
             <div class="container">
                 <div class="row">
-                    <div class="col-12">
+                    <div class="col-12"> -->
                         <!-- start filter navigation -->
-                        <ul class="portfolio-filter nav nav-tabs justify-content-center border-0 portfolio-filter-tab-1 font-weight-600 alt-font text-uppercase text-center margin-80px-bottom text-small md-margin-40px-bottom sm-margin-20px-bottom">
+                        <!-- <ul class="portfolio-filter nav nav-tabs justify-content-center border-0 portfolio-filter-tab-1 font-weight-600 alt-font text-uppercase text-center margin-80px-bottom text-small md-margin-40px-bottom sm-margin-20px-bottom">
                             <li class="nav active"><a href="javascript:void(0);" data-filter="*" class="light-gray-text-link text-very-small">Kõik</a></li>
                             <li class="nav"><a href="javascript:void(0);" data-filter=".bänner" class="light-gray-text-link text-very-small">Bänner</a></li>
                             <li class="nav"><a href="javascript:void(0);" data-filter=".reklaam" class="light-gray-text-link text-very-small">Reklaam</a></li>
@@ -84,18 +105,18 @@
                             <li class="nav"><a href="javascript:void(0);" data-filter=".disain" class="light-gray-text-link text-very-small">Disain</a></li>
                             <li class="nav"><a href="javascript:void(0);" data-filter=".trükis" class="light-gray-text-link text-very-small">Trükis</a></li>
                             <li class="nav"><a href="javascript:void(0);" data-filter=".hindamine" class="light-gray-text-link text-very-small">Kooli tööd</a></li>
-                        </ul>                                                                           
+                        </ul>                                                                            -->
                         <!-- end filter navigation -->
-                    </div>
+                    <!-- </div>
                 </div>
             </div>
             <div class="container-fluid">
                 <div class="row">
                     <div class="col-12 filter-content overflow-hidden">
                         <ul class="hover-option8 portfolio-wrapper grid grid-loading grid-4col xl-grid-4col lg-grid-2col md-grid-2col sm-grid-2col xs-grid-1col gutter-medium">
-                            <li class="grid-sizer"></li>
+                            <li class="grid-sizer"></li> -->
                             <!-- start portfolio item -->
-                            <li class="grid-item wow animate__fadeInUp trükis disain hindamine">
+                            <!-- <li class="grid-item wow animate__fadeInUp trükis disain hindamine">
                                 <a href="ajakiri.html">
                                     <figure>
                                         <div class="portfolio-img"><img src="https://res.cloudinary.com/dxxjplpwo/image/upload/c_scale,w_900/v1641308899/Koduleht/Kaanekujundus_800x800px_l4fxja.jpg" alt=""/></div>
@@ -110,10 +131,10 @@
                                         </figcaption>
                                     </figure>
                                 </a>
-                            </li>
+                            </li> -->
                             <!-- end portfolio item -->
                             <!-- start  portfolio item -->
-                            <li class="grid-item wow animate__fadeInUp bänner logo reklaam disain" data-wow-delay="0.2s">
+                            <!-- <li class="grid-item wow animate__fadeInUp bänner logo reklaam disain" data-wow-delay="0.2s">
                                 <a href="konverents_logo.html">
                                     <figure>
                                         <div class="portfolio-img"><img src="https://res.cloudinary.com/dxxjplpwo/image/upload/bo_1px_solid_rgb:ededed,e_fade:1000/v1641628948/Koduleht/900x900_arvuti_ja_tefeoni_kaliteediuhingu_mockup_rooqa4.jpg" alt=""/></div>
@@ -128,28 +149,28 @@
                                         </figcaption>
                                     </figure>
                                 </a>
-                            </li>
+                            </li> -->
                             <!-- end portfolio item -->
                             <!-- start portfolio item -->
-                            <li class="grid-item grid-item-double logo Disain wow animate__fadeInUp" data-wow-delay="0.4s">
+                            <!-- <li class="grid-item grid-item-double logo Disain wow animate__fadeInUp" data-wow-delay="0.4s">
                                 <a href="minu_cvi.html">
                                     <figure>
                                         <div class="portfolio-img"><img src="https://res.cloudinary.com/dxxjplpwo/image/upload/v1647174618/Koduleht/orginaal_cvioliver_n7p6uu.jpg" alt=""/></div>
                                         <figcaption>
                                             <div class="portfolio-hover-main">
                                                 <div class="portfolio-hover-box align-middle"> 
-                                                    <div class="portfolio-icon alt-font font-weight-600 icon-medium">+</div>
-                                                    <span class="text-extra-large alt-font text-extra-dark-gray margin-5px-bottom"><Oliver Juss logo</span>
+                                                    <div class="portfolio-icon alt-font font-weight-600 icon-medium">+</div><a href="CV">
+                                                    <span class="text-extra-large alt-font text-extra-dark-gray margin-5px-bottom">Oliver Juss logo</span></a>
                                                     <p class="no-letter-spacing text-small mb-0 text-medium-gray">Logo ja Disain</p>
                                                 </div>
                                             </div> 
                                         </figcaption>
                                     </figure>
                                 </a>
-                            </li>
+                            </li> -->
                             <!-- end portfolio item -->
                             <!-- start portfolio item -->
-                            <li class="grid-item grid-item-double reklaam trükis wow animate__fadeInUp">
+                            <!-- <li class="grid-item grid-item-double reklaam trükis wow animate__fadeInUp">
                                 <a href="eesti_ekspress.html">
                                     <figure>
                                         <div class="portfolio-img"><img src="https://res.cloudinary.com/dxxjplpwo/image/upload/v1641489256/Koduleht/eesti_ekspress_900x445_w4savs.jpg" alt=""/></div>
@@ -163,11 +184,11 @@
                                             </div> 
                                         </figcaption>
                                     </figure>
-                                </a>
-                            </li>
+                                </a> -->
+                            <!-- </li> -->
                             <!-- end portfolio item -->
                             <!-- start portfolio item -->
-                            <li class="grid-item grid-item-double logo disain wow animate__fadeInUp" data-wow-delay="0.2s">
+                            <!-- <li class="grid-item grid-item-double logo disain wow animate__fadeInUp" data-wow-delay="0.2s">
                                 <a href="pipewell.html">
                                     <figure>
                                         <div class="portfolio-img"><img src="https://res.cloudinary.com/dxxjplpwo/image/upload/v1641722353/Koduleht/pipewell-tupo_dqvsil.jpg" alt=""/></div>
@@ -182,10 +203,10 @@
                                         </figcaption>
                                     </figure>
                                 </a>
-                            </li>
+                            </li> -->
                             <!-- end portfolio item -->
                             <!-- start portfolio item -->
-                            <li class="grid-item grid-item-double trükis disain hindamine wow animate__fadeInUp" data-wow-delay="0.4s">
+                            <!-- <li class="grid-item grid-item-double trükis disain hindamine wow animate__fadeInUp" data-wow-delay="0.4s">
                                 <a href="van_gogh.html">
                                     <figure>
                                         <div class="portfolio-img"><img src="https://res.cloudinary.com/dxxjplpwo/image/upload/v1647169227/Koduleht/vangoghi_mockup_900x445_halltaust_wultww.jpg" alt=""/></div>
@@ -200,11 +221,11 @@
                                         </figcaption>
                                     </figure>
                                 </a>
-                            </li>
+                            </li> -->
                             <!-- end portfolio item -->
 
                             <!-- start portfolio item -->
-                            <li class="grid-item grid-item-double trükis disain wow animate__fadeInUp" data-wow-delay="0.4s">
+                            <!-- <li class="grid-item grid-item-double trükis disain wow animate__fadeInUp" data-wow-delay="0.4s">
                                 <a href="meny.html">
                                     <figure>
                                         <div class="portfolio-img"><img
@@ -221,11 +242,11 @@
                                         </figcaption>
                                     </figure>
                                 </a>
-                            </li>
+                            </li> -->
                             <!-- end portfolio item -->
                             
                             <!-- start portfolio item -->
-                            <li class="grid-item grid-item-double logo disain reklaam wow animate__fadeInUp">
+                            <!-- <li class="grid-item grid-item-double logo disain reklaam wow animate__fadeInUp">
                                 <a href="koolitusmajakas.html">
                                     <figure>
                                         <div class="portfolio-img"><img src="https://res.cloudinary.com/dxxjplpwo/image/upload/v1647170103/Koduleht/900x900px-_koolitusmajakasLogo1_halltaust_rm1imv.jpg" alt=""/></div>
@@ -240,9 +261,9 @@
                                         </figcaption>
                                     </figure>
                                 </a>
-                            </li>
+                            </li> -->
                             <!-- end portfolio item -->                                
-                            <li class="grid-item wow animate__fadeInUp trükis disain" data-wow-delay="0.2s">
+                            <!-- <li class="grid-item wow animate__fadeInUp trükis disain" data-wow-delay="0.2s">
                                 <a href="piktogrammid.html">
                                     <figure>
                                         <div class="portfolio-img"><img src="https://res.cloudinary.com/dxxjplpwo/image/upload/v1641642437/Koduleht/pictogrammid_mockup_mueceb.jpg" alt=""/></div>
@@ -257,10 +278,10 @@
                                         </figcaption>
                                     </figure>
                                 </a>
-                            </li>
+                            </li> -->
                             <!-- end portfolio item -->
                             <!-- start  portfolio item -->
-                            <li class="grid-item wow animate__fadeInUp trükis disain hindamine" data-wow-delay="0.4s">
+                            <!-- <li class="grid-item wow animate__fadeInUp trükis disain hindamine" data-wow-delay="0.4s">
                                 <a href="kalender.html">
                                     <figure>
                                         <div class="portfolio-img"><img src="https://res.cloudinary.com/dxxjplpwo/image/upload/v1641645404/Koduleht/900x900px_kalender_mockup_xoklxz.jpg" alt=""/></div>
@@ -275,10 +296,10 @@
                                         </figcaption>
                                     </figure>
                                 </a>
-                            </li>
+                            </li> -->
                             <!-- end portfolio item -->
                             <!-- start portfolio item -->
-                            <li class="grid-item grid-item-double trükis disain bänner reklaam wow animate__fadeInUp">
+                            <!-- <li class="grid-item grid-item-double trükis disain bänner reklaam wow animate__fadeInUp">
                                 <a href="spordibanner.html">
                                     <figure>
                                         <div class="portfolio-img"><img src="https://res.cloudinary.com/dxxjplpwo/image/upload/v1647175494/Koduleht/2-guys_i1dnb3.jpg" alt=""/></div>
@@ -293,7 +314,7 @@
                                         </figcaption>
                                     </figure>
                                 </a>
-                            </li>
+                            </li> -->
                             <!-- start  portfolio item -->
                             <!-- end portfolio item --> 
                             <!-- start portfolio item -->
