--- a/CV.html
+++ b/CV.html
@@ -74,6 +74,120 @@
             </div>
         </section>
         <!-- end about section -->
+        <section class="wow animate__fadeIn">
+            <div class="container">
+                <div class="row justify-content-center">
+                    <div class="col-12 col-lg-7 text-center margin-100px-bottom sm-margin-40px-bottom">
+                        <div class="position-relative overflow-hidden w-100">
+                            <span class="text-small text-outside-line-full alt-font font-weight-600 text-uppercase">HARIDUS</span>
+                        </div>
+                    </div>
+                </div>
+                <div class="row justify-content-center">
+                    <div class="col-12 col-lg-6 col-md-10">
+                        <ul class="p-0 list-style-3">
+                            <li>2019-... <br>
+                                Kuressaare Ametikool <br>
+                                Eriala kujundusgraafik <br>
+                                Eeldatav lõpetamise aeg veebruar 2023</li>
+                            <li>2016 – 2019 <br>
+                                Mäepealse Erakool
+                            </li>
+                            <li>2013 – 2016 <br>
+                                Keila-Joa Sanatoorne Internaatkool
+                            </li>
+                            <li>2011 – 2013 <br>
+                                Peetri Lasteaed-Põhikool
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="p-0 wow animate__fadeIn bg-light-gray">
+            <div class="container-fluid">
+                <div class="row row-cols-1 row-cols-lg-2">
+                    <div class="col cover-background md-h-450px wow animate__fadeInLeft"
+                        style="background-image:url('https://via.placeholder.com/1100x670');"></div>
+                    <div
+                        class="col wow animate__fadeInRight padding-five-tb padding-five-lr md-padding-nine-half-tb xs-padding-15px-lr xs-padding-50px-tb">
+                        <div class="row row-cols-1 row-cols-xl-2 row-cols-lg-1 row-cols-md-2 row-cols-sm-2">
+                            <!-- start feature box item -->
+                            <div
+                                class="col margin-six-bottom md-margin-40px-bottom last-paragraph-no-margin text-center text-md-start">
+                                <div class="row">
+                                    <!-- <div class="col-12 col-lg-3 text-center">
+                                        <h3 class="text-light-gray font-weight-300 mb-0 letter-spacing-minus-2">2019</h3>
+                                    </div> -->
+                                    <div class="col-12 col-lg-9 margin-5px-top text-center text-lg-start">
+                                        <span
+                                            class="alt-font text-extra-dark-gray font-weight-600 margin-one-bottom d-block">2019</span>
+                                        <!-- <span
+                                            class="alt-font text-extra-small text-uppercase margin-10px-bottom d-block">Bachelor
+                                            of arts 1990</span> -->
+                                        <p class="d-inline-block w-90 xl-w-95">Kuressaare Ametikool
+                                        
+                                        Eriala kujundusgraafik
+                                        
+                                        Eeldatav lõpetamise aeg veebruar 2023</p>
+                                    </div>
+                                </div>
+                            </div>
+                            <!-- end feature box item -->
+                            <!-- start feature box item -->
+                            <div
+                                class="col margin-six-bottom md-margin-40px-bottom last-paragraph-no-margin text-center text-md-start">
+                                <div class="row">
+                                    <!-- <div class="col-12 col-lg-3 text-center">
+                                        <h3 class="text-light-gray font-weight-300 mb-0 letter-spacing-minus-2">02</h3>
+                                    </div> -->
+                                    <div class="col-12 col-lg-9 margin-5px-top text-center text-lg-start">
+                                        <span
+                                            class="alt-font text-extra-dark-gray font-weight-600 margin-one-bottom d-block">2016 – 2019</span>
+                                        <!-- <span class="alt-font text-extra-small text-uppercase margin-10px-bottom d-block">Degree
+                                            of Web Design 2003</span> -->
+                                        <p class="d-inline-block w-90 xl-w-95">Mäepealse Erakool</p>
+                                    </div>
+                                </div>
+                            </div>
+                            <!-- end feature box item -->
+                            <!-- start feature box item -->
+                            <div
+                                class="col md-margin-40px-bottom lg-margin-six-bottom last-paragraph-no-margin text-center text-md-start">
+                                <div class="row">
+                                    <!-- <div class="col-12 col-lg-3 text-center">
+                                        <h3 class="text-light-gray font-weight-300 mb-0 letter-spacing-minus-2">03</h3>
+                                    </div> -->
+                                    <div class="col-12 col-lg-9 margin-5px-top text-center text-lg-start">
+                                        <span
+                                            class="alt-font text-extra-dark-gray font-weight-600 margin-one-bottom d-block">2013 – 2016</span>
+                                        <!-- <span class="alt-font text-extra-small text-uppercase margin-10px-bottom d-block">Master
+                                            of branding 2006</span> -->
+                                        <p class="d-inline-block w-90 xl-w-95">Keila-Joa Sanatoorne Internaatkool</p>
+                                    </div>
+                                </div>
+                            </div>
+                            <!-- end feature box item -->
+                            <!-- start feature box item -->
+                            <div class="col last-paragraph-no-margin text-center text-md-start">
+                                <div class="row">
+                                    <!-- <div class="col-12 col-lg-3 text-center">
+                                        <h3 class="text-light-gray font-weight-300 mb-0 letter-spacing-minus-2">04</h3>
+                                    </div> -->
+                                    <div class="col-12 col-lg-9 margin-5px-top text-center text-lg-start">
+                                        <span class="alt-font text-extra-dark-gray font-weight-600 margin-one-bottom d-block">2011 – 2013</span>
+                                        <!-- <span class="alt-font text-extra-small text-uppercase margin-10px-bottom d-block">Master
+                                            of Graphics 2007</span> -->
+                                        <p class="d-inline-block w-90 xl-w-95">Peetri Lasteaed-Põhikool</p>
+                                    </div>
+                                </div>
+                            </div>
+                            <!-- end feature box item -->
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
         <!-- start hero section -->
         <!-- <section class="wow animate__fadeIn p-0 mobile-height parallax" data-parallax-background-ratio="0.5" style="background-image: url('images/homepage-option18-banner.jpg')">
             <div class="container text-center one-third-screen lg-h-350px md-h-500px sm-h-auto sm-padding-40px-top sm-padding-50px-bottom">
