CVis programmide taust valge

--- a/CV.html
+++ b/CV.html
@@ -360,7 +360,7 @@
                             <!-- end progress bar keeleoskus section -->
 
                             <!-- start programmid section -->
-                            <section class="wow animate__fadeIn bg-light-gray">
+                            <section class="wow animate__fadeIn">
                                 <div class="container">
                                     <div class="row justify-content-center">
                                         <div
