--- a/CV.html
+++ b/CV.html
@@ -117,9 +117,9 @@
                         <div
                             class="col margin-six-bottom md-margin-40px-bottom last-paragraph-no-margin text-center text-md-start">
                             <div class="row">
-                                <!-- <div class="col-12 col-lg-3 text-center">
-                                        <h3 class="text-light-gray font-weight-300 mb-0 letter-spacing-minus-2">2019</h3>
-                                    </div> -->
+                                <div class="col-12 col-lg-3 text-center">
+                                    <h3 class="text-light-gray font-weight-300 mb-0 letter-spacing-minus-2">01</h3>
+                                </div>
                                 <div class="col-12 col-lg-9 margin-5px-top text-center text-lg-start">
                                     <span
                                         class="alt-font text-extra-dark-gray font-weight-600 margin-one-bottom d-block">2019</span>
@@ -139,9 +139,9 @@
                         <div
                             class="col margin-six-bottom md-margin-40px-bottom last-paragraph-no-margin text-center text-md-start">
                             <div class="row">
-                                <!-- <div class="col-12 col-lg-3 text-center">
-                                        <h3 class="text-light-gray font-weight-300 mb-0 letter-spacing-minus-2">02</h3>
-                                    </div> -->
+                                <div class="col-12 col-lg-3 text-center">
+                                    <h3 class="text-light-gray font-weight-300 mb-0 letter-spacing-minus-2">02</h3>
+                                </div>
                                 <div class="col-12 col-lg-9 margin-5px-top text-center text-lg-start">
                                     <span
                                         class="alt-font text-extra-dark-gray font-weight-600 margin-one-bottom d-block">2016
@@ -153,41 +153,8 @@
                             </div>
                         </div>
                         <!-- end feature box item -->
-                        <!-- start feature box item -->
-                        <div
-                            class="col md-margin-40px-bottom lg-margin-six-bottom last-paragraph-no-margin text-center text-md-start">
-                            <div class="row">
-                                <!-- <div class="col-12 col-lg-3 text-center">
-                                        <h3 class="text-light-gray font-weight-300 mb-0 letter-spacing-minus-2">03</h3>
-                                    </div> -->
-                                <div class="col-12 col-lg-9 margin-5px-top text-center text-lg-start">
-                                    <span
-                                        class="alt-font text-extra-dark-gray font-weight-600 margin-one-bottom d-block">2013
-                                        – 2016</span>
-                                    <!-- <span class="alt-font text-extra-small text-uppercase margin-10px-bottom d-block">Master
-                                            of branding 2006</span> -->
-                                    <p class="d-inline-block w-90 xl-w-95">Keila-Joa Sanatoorne Internaatkool</p>
-                                </div>
-                            </div>
-                        </div>
-                        <!-- end feature box item -->
-                        <!-- start feature box item -->
-                        <div class="col last-paragraph-no-margin text-center text-md-start">
-                            <div class="row">
-                                <!-- <div class="col-12 col-lg-3 text-center">
-                                        <h3 class="text-light-gray font-weight-300 mb-0 letter-spacing-minus-2">04</h3>
-                                    </div> -->
-                                <div class="col-12 col-lg-9 margin-5px-top text-center text-lg-start">
-                                    <span
-                                        class="alt-font text-extra-dark-gray font-weight-600 margin-one-bottom d-block">2011
-                                        – 2013</span>
-                                    <!-- <span class="alt-font text-extra-small text-uppercase margin-10px-bottom d-block">Master
-                                            of Graphics 2007</span> -->
-                                    <p class="d-inline-block w-90 xl-w-95">Peetri Lasteaed-Põhikool</p>
-                                </div>
-                            </div>
-                        </div>
-                        <!-- end feature box item -->
+
+
                     </div>
                 </div>
             </div>
