--- a/CV.html
+++ b/CV.html
@@ -99,7 +99,7 @@
                 <div class="col-12 col-lg-7 text-center margin-30px-bottom sm-margin-20px-bottom">
                     <div class="position-relative overflow-hidden w-100">
                         <span
-                            class="text-small text-outside-line-full alt-font font-weight-600 text-uppercase">HARIDUS</span>
+                            class="text-large text-outside-line-full alt-font font-weight-600 text-uppercase">HARIDUS</span>
                     </div>
                 </div>
             </div>
@@ -122,7 +122,8 @@
                                 </div>
                                 <div class="col-12 col-lg-9 margin-5px-top text-center text-lg-start">
                                     <span
-                                        class="alt-font text-extra-dark-gray font-weight-600 margin-one-bottom d-block">2019</span>
+                                        class="alt-font text-extra-dark-gray font-weight-600 margin-one-bottom d-block">2019
+                                        - ...</span>
                                     <!-- <span
                                             class="alt-font text-extra-small text-uppercase margin-10px-bottom d-block">Bachelor
                                             of arts 1990</span> -->
@@ -168,7 +169,7 @@
                 <div class="col-12 col-lg-7 text-center margin-100px-bottom sm-margin-40px-bottom">
                     <div class="position-relative overflow-hidden w-100">
                         <span
-                            class="text-small text-outside-line-full alt-font font-weight-600 text-uppercase">TÖÖ</span>
+                            class="text-large text-outside-line-full alt-font font-weight-600 text-uppercase">TÖÖ</span>
                     </div>
                 </div>
             </div>
@@ -211,7 +212,7 @@
                             <div class="col-12 col-lg-7 text-center margin-100px-bottom sm-margin-40px-bottom">
                                 <div class="position-relative overflow-hidden w-100">
                                     <span
-                                        class="text-small text-outside-line-full alt-font font-weight-600 text-uppercase">KONKURSID</span>
+                                        class="text-large text-outside-line-full alt-font font-weight-600 text-uppercase">KONKURSID</span>
                                 </div>
                             </div>
                         </div>
@@ -244,7 +245,7 @@
                                     <div class="col-12 col-lg-7 text-center margin-100px-bottom sm-margin-40px-bottom">
                                         <div class="position-relative overflow-hidden w-100">
                                             <span
-                                                class="text-small text-outside-line-full alt-font font-weight-600 text-uppercase">Keeleoskus</span>
+                                                class="text-large text-outside-line-full alt-font font-weight-600 text-uppercase">Keeleoskus</span>
                                         </div>
                                     </div>
                                 </div>
@@ -297,7 +298,7 @@
                                     <div class="col-12 col-lg-7 text-center margin-100px-bottom sm-margin-40px-bottom">
                                         <div class="position-relative overflow-hidden w-100">
                                             <span
-                                                class="text-small text-outside-line-full alt-font font-weight-600 text-uppercase">programmid</span>
+                                                class="text-large text-outside-line-full alt-font font-weight-600 text-uppercase">programmid</span>
                                         </div>
                                     </div>
                                 </div>
@@ -375,7 +376,7 @@
                                     <div class="col-1 col-lg-7 text-center">
                                         <div class="position-relative overflow-hidden w-100">
                                             <span
-                                                class="text-small text-outside-line-full alt-font font-weight-600 text-uppercase">Huvialad</span>
+                                                class="text-large text-outside-line-full alt-font font-weight-600 text-uppercase">Huvialad</span>
                                         </div>
                                     </div>
                                 </div>
@@ -462,7 +463,7 @@
                                             class="col-12 col-lg-7 text-center margin-100px-bottom sm-margin-40px-bottom">
                                             <div class="position-relative overflow-hidden w-100">
                                                 <span
-                                                    class="text-small text-outside-line-full alt-font font-weight-600 text-uppercase">Tugevad
+                                                    class="text-large text-outside-line-full alt-font font-weight-600 text-uppercase">Tugevad
                                                     küljed</span>
                                             </div>
                                         </div>
