--- a/CV_inglise.html
+++ b/CV_inglise.html
@@ -57,11 +57,10 @@
                 <!-- end logo -->
                 <div
                     class="text-medium-gray text-uus-small text-uppercase margin-10px-top letter-spacing-2 alt-font sm-margin-10px-top style:textcolor red">
-                    <a href="CV_inglise.html" style="color: #ffffff;">english</a>
+                    <a href="CV.html" style="color: #ffffff;">Estonian</a>
                 </div>
             </div>
             <!-- End Header Navigation -->
-
         </nav>
         <!-- end navigation -->
     </header>
@@ -77,13 +76,13 @@
                         <h5 class="text-extra-dark-gray margin-0px-bottom md-margin-0px-bottom alt-font">
                             <ul class="text-medium list-style-7">
                                 <li><span
-                                        class="w-30 lg-w-35 md-w-30 xs-w-35 xs-padding-5px-right d-inline-block">Nimi:</span>Oliver
+                                        class="w-30 lg-w-35 md-w-30 xs-w-35 xs-padding-5px-right d-inline-block">Name:</span>Oliver
                                     Juss</li>
                                 <li><span
                                         class="w-30 lg-w-35 md-w-30 xs-w-35 xs-padding-5px-right d-inline-block">Email:</span><a
                                         href="mailto:oliver.juss@ametikool.ee">oliver.juss@ametikool.ee</a></li>
                                 <li><span
-                                        class="w-30 lg-w-35 md-w-30 xs-w-35 xs-padding-5px-right d-inline-block">Telefon:</span>+372
+                                        class="w-30 lg-w-35 md-w-30 xs-w-35 xs-padding-5px-right d-inline-block">Phone:</span>+372
                                     5668 1811</li>
 
                                 <li><span
@@ -103,7 +102,7 @@
                 <div class="col-12 col-lg-7 text-center margin-30px-bottom sm-margin-20px-bottom">
                     <div class="position-relative overflow-hidden w-100">
                         <span
-                            class="text-large text-outside-line-full alt-font font-weight-600 text-uppercase">HARIDUS</span>
+                            class="text-large text-outside-line-full alt-font font-weight-600 text-uppercase">Education</span>
                     </div>
                 </div>
             </div>
@@ -131,11 +130,8 @@
                                     <!-- <span
                                             class="alt-font text-extra-small text-uppercase margin-10px-bottom d-block">Bachelor
                                             of arts 1990</span> -->
-                                    <p class="d-inline-block w-90 xl-w-95">Kuressaare Ametikool
-
-                                        Eriala kujundusgraafik
-
-                                        Eeldatav lõpetamise aeg veebruar 2023</p>
+                                    <p class="d-inline-block w-90 xl-w-95">Kuressaare Regional Training metier graphic
+                                        designer estimated graduate time february 2023</p>
                                 </div>
                             </div>
                         </div>
@@ -173,7 +169,7 @@
                 <div class="col-12 col-lg-7 text-center margin-100px-bottom sm-margin-40px-bottom">
                     <div class="position-relative overflow-hidden w-100">
                         <span
-                            class="text-large text-outside-line-full alt-font font-weight-600 text-uppercase">TÖÖ</span>
+                            class="text-large text-outside-line-full alt-font font-weight-600 text-uppercase">work</span>
                     </div>
                 </div>
             </div>
@@ -188,10 +184,10 @@
                         <div class="padding-fifteen-all md-padding-50px-all sm-padding-30px-all w-100">
                             <h2 class="text-light-gray alt-font letter-spacing-minus-3 mb-0">2019 - ...</h2>
                             <span
-                                class="d-block alt-font text-large text-extra-dark-gray margin-15px-top margin-10px-bottom sm-margin-5px-bottom">Vabakutseline</span>
-                            <p>Erinevad tööd nt. jõulukaartide kujundamine, logod, piltide töötlused erinevatele
-                                ettevõtetele (Pipewell ja
-                                Kvaliteediühingu konverentsi logod, SOS Lasteküla, UneRuno OÜ jne)</p>
+                                class="d-block alt-font text-large text-extra-dark-gray margin-15px-top margin-10px-bottom sm-margin-5px-bottom">Freelancing</span>
+                            <p>Different jobs like designing christmas cards, logos, photo manipulations for many
+                                company's (Pipewell and Estonian
+                                Association for Quality Conference logo, SOS Lasteküla, UneRuno OÜ etc)</p>
                         </div>
                     </div>
                     <!-- end feature box item -->
@@ -199,12 +195,12 @@
                     <div class="col text-center d-flex align-items-center last-paragraph-no-margin wow animate__fadeInRight p-0"
                         data-wow-delay="0.2s">
                         <div class="padding-fifteen-all md-padding-50px-all sm-padding-30px-all w-100">
-                            <h2 class="text-light-gray alt-font letter-spacing-minus-3 mb-0">2021 suvi</h2>
+                            <h2 class="text-light-gray alt-font letter-spacing-minus-3 mb-0">2021 summer</h2>
                             <span
                                 class="d-block alt-font text-large text-extra-dark-gray margin-15px-top margin-10px-bottom sm-margin-5px-bottom">Liikva
                                 Päikesekodu </span>
-                            <p>Õppekava järgne kujunduspraktika II kursus Reklaamide ja piktogrammide kujundamine,
-                                kodulehe haldamine</p>
+                            <p>Following Curriculum graphic design internship II course advertisement and pictograms
+                                design, website management</p>
                         </div>
                     </div>
                     <!-- end töö item -->
@@ -216,7 +212,7 @@
                             <div class="col-12 col-lg-7 text-center margin-100px-bottom sm-margin-40px-bottom">
                                 <div class="position-relative overflow-hidden w-100">
                                     <span
-                                        class="text-large text-outside-line-full alt-font font-weight-600 text-uppercase">KONKURSID</span>
+                                        class="text-large text-outside-line-full alt-font font-weight-600 text-uppercase">COMPETITIONS</span>
                                 </div>
                             </div>
                         </div>
@@ -229,11 +225,11 @@
                                     <figure>
                                         <i
                                             class="icon-hotairballoon icon-extra-medium text-medium-gray margin-15px-bottom"></i>
-                                        <span class="alt-font text-extra-dark-gray d-block margin-10px-bottom">Haridus-
-                                            ja
-                                            Teadusministeeriumi korraldatud konkurss</span>
+                                        <span
+                                            class="alt-font text-extra-dark-gray d-block margin-10px-bottom">Competition
+                                            organized by the Ministry of Education and Research</span>
                                         <div class="details">
-                                            <p class="w-65 mx-auto">Digitaalse kunsti konkursitöö I koht</p>
+                                            <p class="w-65 mx-auto">1st place in the digital art competition</p>
                                         </div>
                                     </figure>
                                 </div>
@@ -249,7 +245,8 @@
                                     <div class="col-12 col-lg-7 text-center margin-100px-bottom sm-margin-40px-bottom">
                                         <div class="position-relative overflow-hidden w-100">
                                             <span
-                                                class="text-large text-outside-line-full alt-font font-weight-600 text-uppercase">Keeleoskus</span>
+                                                class="text-large text-outside-line-full alt-font font-weight-600 text-uppercase">Language
+                                                skills</span>
                                         </div>
                                     </div>
                                 </div>
@@ -259,8 +256,7 @@
                                         <div
                                             class="progress progress-step-style-03 bg-transparent-black-very-light rounded-0 margin-55px-bottom">
                                             <span
-                                                class="progress-title text-extra-small text-uppercase text-dark-gray">Eesti
-                                                keel</span>
+                                                class="progress-title text-extra-small text-uppercase text-dark-gray">Estonian</span>
                                             <div class="progress-bar bg-extra-dark-gray rounded-0" role="progressbar"
                                                 aria-valuenow="99" aria-valuemin="0" aria-valuemax="100"></div>
                                             <span class="progress-bar-percent text-small">99%</span>
@@ -270,8 +266,7 @@
                                         <div
                                             class="progress progress-step-style-03 bg-transparent-black-very-light rounded-0 margin-55px-bottom">
                                             <span
-                                                class="progress-title text-extra-small text-uppercase text-dark-gray">Inglise
-                                                keel</span>
+                                                class="progress-title text-extra-small text-uppercase text-dark-gray">English</span>
                                             <div class="progress-bar bg-extra-dark-gray rounded-0" role="progressbar"
                                                 aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
                                             <span class="progress-bar-percent text-small">80%</span>
@@ -281,8 +276,7 @@
                                         <div
                                             class="progress progress-step-style-03 bg-transparent-black-very-light rounded-0 margin-55px-bottom">
                                             <span
-                                                class="progress-title text-extra-small text-uppercase text-dark-gray">Vene
-                                                keel </span>
+                                                class="progress-title text-extra-small text-uppercase text-dark-gray">Russian</span>
                                             <div class="progress-bar bg-extra-dark-gray rounded-0" role="progressbar"
                                                 aria-valuenow="10" aria-valuemin="0" aria-valuemax="100"></div>
                                             <span class="progress-bar-percent text-small">10%</span>
@@ -302,7 +296,7 @@
                                     <div class="col-12 col-lg-7 text-center margin-100px-bottom sm-margin-40px-bottom">
                                         <div class="position-relative overflow-hidden w-100">
                                             <span
-                                                class="text-large text-outside-line-full alt-font font-weight-600 text-uppercase">programmid</span>
+                                                class="text-large text-outside-line-full alt-font font-weight-600 text-uppercase">programs</span>
                                         </div>
                                     </div>
                                 </div>
@@ -380,7 +374,7 @@
                                     <div class="col-1 col-lg-7 text-center">
                                         <div class="position-relative overflow-hidden w-100">
                                             <span
-                                                class="text-large text-outside-line-full alt-font font-weight-600 text-uppercase">Huvialad</span>
+                                                class="text-large text-outside-line-full alt-font font-weight-600 text-uppercase">interests</span>
                                         </div>
                                     </div>
                                 </div>
@@ -399,7 +393,7 @@
                                                 </div>
                                                 <div
                                                     class="alt-font text-extra-dark-gray font-weight-600 margin-10px-bottom">
-                                                    3D modelleerimine
+                                                    3D modeling
                                                 </div>
 
                                             </div>
@@ -415,7 +409,7 @@
                                                 </div>
                                                 <div
                                                     class="alt-font text-extra-dark-gray font-weight-600 margin-10px-bottom">
-                                                    Animeerimine
+                                                    Animation
                                                 </div>
 
                                             </div>
@@ -432,7 +426,7 @@
                                                 </div>
                                                 <div
                                                     class="alt-font text-extra-dark-gray font-weight-600 margin-10px-bottom">
-                                                    Arvutimängud
+                                                    Video games
                                                 </div>
 
                                             </div>
@@ -448,7 +442,7 @@
                                                 </div>
                                                 <div
                                                     class="alt-font text-extra-dark-gray font-weight-600 margin-10px-bottom">
-                                                    Anime fänn
+                                                    Anime fan
                                                 </div>
 
                                             </div>
@@ -467,8 +461,7 @@
                                     <div class="col-12 col-lg-7 text-center margin-100px-bottom sm-margin-40px-bottom">
                                         <div class="position-relative overflow-hidden w-100">
                                             <span
-                                                class="text-large text-outside-line-full alt-font font-weight-600 text-uppercase">Tugevad
-                                                küljed</span>
+                                                class="text-large text-outside-line-full alt-font font-weight-600 text-uppercase">strengths</span>
                                         </div>
                                     </div>
                                 </div>
@@ -481,7 +474,7 @@
                                             <div class="feature-content">
                                                 <div
                                                     class="text-extra-dark-gray margin-10px-bottom alt-font font-weight-600">
-                                                    Hea tarkvaraga</div>
+                                                    Technology savvy</div>
                                             </div>
                                         </div>
                                     </div>
@@ -494,7 +487,7 @@
                                             <div class="feature-content">
                                                 <div
                                                     class="text-extra-dark-gray margin-10px-bottom alt-font font-weight-600">
-                                                    Loominguline</div>
+                                                    Creative</div>
 
                                             </div>
                                         </div>
@@ -508,7 +501,7 @@
                                             <div class="feature-content">
                                                 <div
                                                     class="text-extra-dark-gray margin-10px-bottom alt-font font-weight-600">
-                                                    Kohusetundlikkus
+                                                    Conscientiousness
                                                 </div>
 
                                             </div>
@@ -523,7 +516,7 @@
                                             <div class="feature-content">
                                                 <div
                                                     class="text-extra-dark-gray margin-10px-bottom alt-font font-weight-600">
-                                                    Positiivne ellusuhtumine</div>
+                                                    Positive outlook on life</div>
 
                                             </div>
                                         </div>
@@ -537,7 +530,7 @@
                                             <div class="feature-content">
                                                 <div
                                                     class="text-extra-dark-gray margin-10px-bottom alt-font font-weight-600">
-                                                    Sihikindlus</div>
+                                                    Determination</div>
 
                                             </div>
                                         </div>
@@ -550,7 +543,7 @@
                                             <div class="feature-content">
                                                 <div
                                                     class="text-extra-dark-gray margin-10px-bottom alt-font font-weight-600">
-                                                    Kiire õppimisvõime
+                                                    Fast learner
                                                 </div>
                                             </div>
                                         </div>
