--- a/CV.html
+++ b/CV.html
@@ -63,7 +63,7 @@
             <!-- End Header Navigation -->
 
         </nav>
-        <!-- end navigation -->
+        <!-- end navigationi -->
     </header>
     <!-- end header -->
     <!-- start about section -->
