--- a/CV.html
+++ b/CV.html
@@ -65,7 +65,7 @@
         </nav>
         <!-- end navigationi -->
     </header>
-    <!-- end header -->
+    <!-- end headeri -->
     <!-- start about section -->
     <section class="wow animate__fadeIn parallax" data-parallax-background-ratio="0.5"
         style="background-image:url('https://res.cloudinary.com/dxxjplpwo/image/upload/v1647767324/Koduleht/2-guys1920x1100_qmedzm.jpg');">
