CVi iconi muutumine

--- a/CV.html
+++ b/CV.html
@@ -33,14 +33,17 @@
     <header>
         <!-- start navigation -->
         <nav
-            class="navbar navbar-default bootsnav bg-transparent navbar-top nav-box-width navbar-transparent-no-sticky">
+            class=" navbar navbar-default bootsnav bg-transparent navbar-top nav-box-width navbar-transparent-no-sticky">
             <div class="container-fluid nav-header-container h-100px sm-h-70px">
                 <!-- start header navigation -->
                 <div class="col d-none d-md-block text-start ps-0">
                     <div class="header-social-icon border-none no-padding-left no-margin-left">
-                        <a href="#" title="Facebook" target="_blank"><i class="fab fa-facebook-f"></i></a>
-                        <a href="#" title="Twitter" target="_blank"><i class="fab fa-twitter"></i></a>
-                        <a href="#" title="Dribbble" target="_blank"><i class="fab fa-dribbble"></i></a>
+                        <a href="#" title="Facebook" target="_blank"><i class="fab fa-facebook-f"
+                                style="color: #ffffff;"></i></a>
+                        <a href="#" title="Twitter" target="_blank"><i class="fab fa-twitter"
+                                style="color: #ffffff;"></i></a>
+                        <a href="#" title="Dribbble" target="_blank"><i class="fab fa-dribbble"
+                                style="color: #ffffff;"></i></a>
                         <div no-margin-right>
 
 
@@ -65,7 +68,7 @@
         </nav>
         <!-- end navigationi -->
     </header>
-    <!-- end headeri -->
+    <!-- end header -->
     <!-- start about section -->
     <section class="wow animate__fadeIn parallax" data-parallax-background-ratio="0.5"
         style="background-image:url('https://res.cloudinary.com/dxxjplpwo/image/upload/v1647767324/Koduleht/2-guys1920x1100_qmedzm.jpg');">
