--- a/CV_inglise.html
+++ b/CV_inglise.html
@@ -38,9 +38,12 @@
                 <!-- start header navigation -->
                 <div class="col d-none d-md-block text-start ps-0">
                     <div class="header-social-icon border-none no-padding-left no-margin-left">
-                        <a href="#" title="Facebook" target="_blank"><i class="fab fa-facebook-f"></i></a>
-                        <a href="#" title="Twitter" target="_blank"><i class="fab fa-twitter"></i></a>
-                        <a href="#" title="Dribbble" target="_blank"><i class="fab fa-dribbble"></i></a>
+                        <a href="#" title="Facebook" target="_blank"><i class="fab fa-facebook-f"
+                                style="color: #ffffff;"></i></a>
+                        <a href="#" title="Twitter" target="_blank"><i class="fab fa-twitter"
+                                style="color: #ffffff;"></i></a>
+                        <a href="#" title="Dribbble" target="_blank"><i class="fab fa-dribbble"
+                                style="color: #ffffff;"></i></a>
                         <div no-margin-right>
 
 
