--- a/kooli_t66d_2021_2022.html
+++ b/kooli_t66d_2021_2022.html
@@ -8,7 +8,7 @@
         <meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=1" />
         <meta name="author" content="ThemeZaa">
         <!-- description -->
-        <meta name="description" content="POFO is a highly creative, modern, visually stunning and Bootstrap responsive multipurpose agency and portfolio HTML5 template with 25 ready home page demos.">
+        <meta name="description" content="Oman kogemusi Ai, Ps, Id, Blenderi programmidega töötamisel. Olen  avatud kõigele uuele  ja täiendan ennast iseseisvalt pidevalt nii koolis kui erinevatel online kursustel. ">
         <!-- keywords -->
         <meta name="keywords" content="creative, modern, clean, bootstrap responsive, html5, css3, portfolio, blog, agency, templates, multipurpose, one page, corporate, start-up, studio, branding, designer, freelancer, carousel, parallax, photography, personal, masonry, grid, coming soon, faq">
         <!-- favicon -->
