--- a/saareliind_joulukaart.html
+++ b/saareliind_joulukaart.html
@@ -10,7 +10,7 @@
     <meta name="author" content="ThemeZaa">
     <!-- description -->
     <meta name="description"
-        content="POFO is a highly creative, modern, visually stunning and Bootstrap responsive multipurpose agency and portfolio HTML5 template with 25 ready home page demos.">
+        content="Oman kogemusi Ai, Ps, Id, Blenderi programmidega töötamisel. Olen avatud kõigele uuele  ja täiendan ennast iseseisvalt pidevalt nii koolis kui erinevatel online kursustel.">
     <!-- keywords -->
     <meta name="keywords"
         content="creative, modern, clean, bootstrap responsive, html5, css3, portfolio, blog, agency, templates, multipurpose, one page, corporate, start-up, studio, branding, designer, freelancer, carousel, parallax, photography, personal, masonry, grid, coming soon, faq">
