mai hindamine leht

--- a/Elisabeth_Ellinorile_logo.html
+++ b/Elisabeth_Ellinorile_logo.html
@@ -67,7 +67,13 @@
                     </div>
                     <div class="col-12 col-lg-5 offset-lg-1 line-height-28 last-paragraph-no-margin md-margin-50px-bottom sm-margin-30px-bottom wow animate__fadeInUp">
                         <p>Ülesanne oli kujundada logo/märk ja logoraamat filmikunstnik Elisabeth Ellinorile. Mina sain logo loomiseks
-                        inspiratsiooni ruunidest. Kuna ruunid on väga jõulised siis selle rõhutamiseks kasutan ainult must-valgeid värvitoone.</p>
+                        inspiratsiooni ruunidest. Logo sümboolikas võtsin aluseks viikingi sümboli, mis tähendab “loo oma reaalsus”. Oma kujunduses lähtusin minimalismist ning erinevatest lihtsatest sümbolitest. 
+
+                        Kaks üles suunatud noolt tähendavad võitu ja kasvamist. Samas meenutavad need mägesid ja looduslähedust. 
+                        
+                        Nool kui sümbol viitab avatusele uutele kogemusele, tugevust, julgust, keskendumist ja kavalust ning võimet suhelda ja  liikuda vajadusel väga kiiresti. 
+                        
+                        Ring ümber viikingi sümboli näitab pidevat liikumist ja ühtlasi on ka päikese ning täiuslikkuse sümbol. Samas on ka ring harmoonia sümbol, mis rahustab ja tasakaalustab logo </p>
                     </div>
                     <div class="col-12 col-lg-4 offset-lg-1 line-height-26 wow animate__fadeInUp">
                         <ul class="list-style-6 margin-twelve-left">
@@ -87,11 +93,11 @@
             <div class="container">
                 <div class="row">
                     <div class="col-12 margin-30px-bottom xs-margin-15px-bottom wow animate__fadeInUp">
-                        <img src="https://res.cloudinary.com/dxxjplpwo/image/upload/v1642847811/Koduleht/nora_logo_900x445px_pgnt13.jpg" class="w-100" alt=""/>
+                        <img src="https://res.cloudinary.com/dxxjplpwo/image/upload/v1652802362/Koduleht/nora_logo2_xjvhkx.jpg" class="w-100" alt=""/>
                     </div>
-                    <div class="col-12 margin-30px-bottom xs-margin-15px-bottom wow animate__fadeInUp">
+                    <!-- <div class="col-12 margin-30px-bottom xs-margin-15px-bottom wow animate__fadeInUp">
                         <img src="https://res.cloudinary.com/dxxjplpwo/image/upload/v1642952792/Koduleht/nora_logo_ibf8q1.jpg" class="w-100" alt=""/>
-                    </div>
+                    </div> -->
                 </div>
             </div>
         </section>
