--- a/mai_hindamis_t66d.html
+++ b/mai_hindamis_t66d.html
@@ -88,10 +88,10 @@ gtag('config', 'G-XXXXXXX');
                     <li class="nav active"><a href="javascript:void(0);" data-filter="*"
                             class="light-gray-text-link text-very-small">Kõik</a></li>
                     <li class="nav"><a href="javascript:void(0);" data-filter=".bänner"
-                            class="light-gray-text-link text-very-small">Bänner</a></li>
-                    <li class="nav"><a href="javascript:void(0);" data-filter=".reklaam"
-                            class="light-gray-text-link text-very-small">Reklaam</a></li>
-                    <li class="nav"><a href="javascript:void(0);" data-filter=".logo"
+                            class="light-gray-text-link text-very-small">Ettevõtluspraktika/ Õpilasfirma</a></li>
+                    <li class="nav"><a href="javascript:void(0);" data-filter=".õpilasfirma"
+                            class="light-gray-text-link text-very-small">Firmagraafika</a></li>
+                    <li class="nav"><a href="javascript:void(0);" data-filter=".firmagraafika"
                             class="light-gray-text-link text-very-small">Logo</a></li>
                     <li class="nav"><a href="javascript:void(0);" data-filter=".disain"
                             class="light-gray-text-link text-very-small">Disain</a></li>
@@ -134,20 +134,19 @@ gtag('config', 'G-XXXXXXX');
                     </li>
                     <!-- end portfolio item -->
                     <!-- start  portfolio item -->
-                    <li class="grid-item wow animate__fadeInUp bänner logo reklaam disain" data-wow-delay="0.2s">
-                        <a href="konverents_logo.html">
+                    <li class="grid-item wow animate__fadeInUp bänner logo reklaam firmagraafika " data-wow-delay="0.2s">
+                        <a href="Elisabeth_Ellinorile_logo.html">
                             <figure>
                                 <div class="portfolio-img"><img
-                                        src="https://res.cloudinary.com/dxxjplpwo/image/upload/bo_1px_solid_rgb:ededed,e_fade:1000/v1641628948/Koduleht/900x900_arvuti_ja_tefeoni_kaliteediuhingu_mockup_rooqa4.jpg"
+                                        src="https://res.cloudinary.com/dxxjplpwo/image/upload/v1652800785/Koduleht/nora_logo_smncfm.jpg"
                                         alt="" /></div>
                                 <figcaption>
                                     <div class="portfolio-hover-main">
                                         <div class="portfolio-hover-box align-middle">
                                             <div class="portfolio-icon alt-font font-weight-600 icon-medium">+</div>
                                             <span
-                                                class="text-extra-large alt-font text-extra-dark-gray margin-5px-bottom">Juhtimiskonverents</span>
-                                            <p class="no-letter-spacing text-small mb-0 text-medium-gray">Logo ja
-                                                Reklaam</p>
+                                                class="text-extra-large alt-font text-extra-dark-gray margin-5px-bottom"> Elisabeth Ellinorile logo </span>
+                                            <p class="no-letter-spacing text-small mb-0 text-medium-gray">Firmagraafika</p>
                                         </div>
                                     </div>
                                 </figcaption>
@@ -359,25 +358,26 @@ gtag('config', 'G-XXXXXXX');
                         </a>
                     </li>
                      <!-- start portfolio item -->
-                     <!-- <li class="grid-item grid-item-double logo disain reklaam wow animate__fadeInUp">
+                     <li class="grid-item grid-item-double logo disain reklaam wow animate__fadeInUp">
                         <a href="mai_hindamis_t66d.html">
                             <figure>
                                 <div class="portfolio-img"><img
-                                        src="https://res.cloudinary.com/dxxjplpwo/image/upload/v1652800785/Koduleht/nora_logo_smncfm.jpg"
+                                        src="https://res.cloudinary.com/dxxjplpwo/image/upload/v1647170103/Koduleht/900x900px-_koolitusmajakasLogo1_halltaust_rm1imv.jpg"
                                         alt="" /></div>
                                 <figcaption>
                                     <div class="portfolio-hover-main">
                                         <div class="portfolio-hover-box align-middle">
                                             <div class="portfolio-icon alt-font font-weight-600 icon-medium">+</div>
                                             <span
-                                                class="text-extra-large alt-font text-extra-dark-gray margin-5px-bottom">Mai hindamis tööd</span>
-                                            <p class="no-letter-spacing text-small mb-0 text-medium-gray">Koolitööd</p>
+                                                class="text-extra-large alt-font text-extra-dark-gray margin-5px-bottom">Koolitusmajakas</span>
+                                            <p class="no-letter-spacing text-small mb-0 text-medium-gray">Logo ja
+                                                Disain</p>
                                         </div>
                                     </div>
                                 </figcaption>
                             </figure>
                         </a>
-                    </li> -->
+                    </li>
                     <!-- end portfolio item -->
                     <!-- start  portfolio item -->
                     <!-- end portfolio item -->
